--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
                                'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 
                                'data-turbolinks-track': 'reload' %>
-    <!--[if lt IE 9]>
+    <<!-- if="" lt="c" IE="" 9=""></!-->
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5dshiv/r29/html5.min.js">
       </script>
     <![endif]-->
@@ -17,9 +17,70 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-    <%= yield %>
-    <%= debug(params) if Rails.env.development? %>
-  </div>
- </body>
+      
+      <% flash.each do |message_type, msg| %>
+        <div class="alert alert-<%= message_type %>"><%= msg %></div>
+      <% end %>
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
+    </div>
+  </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
